# hikingGPS

./: Makefile  README  README.md  makefileARM  makefileX86  meson.build  meson_options.txt
data/maps/C50k/: mapindex
debos/: README.md  debian-base.yaml  debian-boneblack.yaml  debian-uefi.yaml  debimage.yaml
debos/overlays/base/etc/default/: grub
debos/overlays/base/etc/dracut.conf.d/: 20-omap-mmc.conf  40-drm.conf
debos/overlays/base/systemd/system/: weston.service
debos/overlays/base/usr/lib/systemd/system/: weston.service
debos/scripts/: install-app.sh  setup-extlinux.sh
maps/: mapset
src/: meson.build
src/include/: maps.h
src/ozdisplay/: SDL2init.c  SDL2misc.c  displaymap.c
src/ozmaps/: initmaps.c  mapmanager.c  mapmisc.c  readsensors.c
